[fix]: fixing header banner text alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -65,6 +65,10 @@ header {
   height: 100%;
   padding-left: 200px;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  justify-content: center;
 }
 
 .welcome-text h2 {
@@ -72,10 +76,12 @@ header {
 }
 
 .welcome-text h5 {
+  padding-top: 1rem;
   font-size: 1rem;
 }
 
 .welcome-text p {
+  padding-top: 2rem;
   font-size: 0.975rem;
 }
 
